[tool.poetry]
name = "sd"
version = "0.1.0"
description = "Sarcasm detection (NLP Project)"
authors = ["Victoria Lebedeva <vict1464@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
